--- a/git/formuladb-env/frmdb-apps/design-therapy/index.html
+++ b/git/formuladb-env/frmdb-apps/design-therapy/index.html
@@ -7,8 +7,8 @@
     <frmdb-t-main-nav class="fixed-top row frmdb-bg-dark-30 shadow py-4 border-bottom border-bottom-2 border-primary justify-content-center">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover class="frmdb-transform-preserve-3d">
-        <frmdb-t-main class="min-vh-100 d-flex align-items-center justify-content-center frmdb-bg-zoom-in overflow-hidden px-md-0 px-3" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/design-therapy/static/55e1d144425bae14f6da8c7dda79367f1c37dfe752506c4870277bdd974fc45db8_1280.jpg&quot;);">
+    <frmdb-t-cover class="frmdb-transform-preserve-3d" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/design-therapy/static/55e1d144425bae14f6da8c7dda79367f1c37dfe752506c4870277bdd974fc45db8_1280.jpg&quot;);">
+        <frmdb-t-main class="min-vh-100 d-flex align-items-center justify-content-center frmdb-bg-zoom-in overflow-hidden px-md-0 px-3">
             <div class="jumbotron animated slideInUp col-12 col-lg-8 min-vh-50 text-light frmdb-bg-dark-40 m-3 p-3 border border-2 border-primary text-center d-flex flex-column justify-content-around" data-aos="slideInUp">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4" data-i18n="en">design therapy</h1>
