--- a/git/formuladb-env/frmdb-apps/formuladb-io/_head.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/_head.html
@@ -22,5 +22,5 @@
 <meta name="author" content="FormulaDB">
 <title>FormulaDB - Build Applications Without Code</title>
 <link rel="icon" href="./favicon.svg">
-<link id="frmdb-look-css" type="text/css" href="/formuladb-env/css/cerulean-7795f8-6c757d.css" rel="stylesheet">
+<link rel="stylesheet" href="./formuladb-look.css">
 </head>
