--- a/git/formuladb-env/frmdb-apps/hotel-booking/index.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/index.html
@@ -11,7 +11,7 @@
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
     <frmdb-t-cover style="--frmdb-bg-img:url('/formuladb-env/frmdb-apps/hotel-booking/static/resort-906102_1920.jpg');">
-        <frmdb-t-main style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/hotel-booking/static/resort-906102_1920.jpg')">
+        <frmdb-t-main>
             <div class="jumbotron">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4">Relax And Enjoy</h1>
