--- a/git/formuladb-env/frmdb-apps/law-firm/index.html
+++ b/git/formuladb-env/frmdb-apps/law-firm/index.html
@@ -7,7 +7,7 @@
     <frmdb-t-main-nav class="container bg-white fixed-top shadow">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/law-firm/static/55e5d2444857a414f6da8c7dda79367f1c37dfe752506c4870277ad49045cd51bf_1280.jpg&quot;);">
+    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/law-firm/static/55e5d2444857a414f6da8c7dda79367f1c37dfe752506c4870277ad49045cd51bf_1280.jpg&quot;);">
         <frmdb-t-main class="flex-grow-1 d-flex flex-column justify-content-end">
             <div class="jumbotron animated slideInUp w-100 text-center bg-transparent" data-aos="slideInUp">
                 <h1 class="display-4" data-i18n="en">best attorneys at law</h1>
