--- a/git/formuladb-env/frmdb-apps/vegetarian-restaurant/index.html
+++ b/git/formuladb-env/frmdb-apps/vegetarian-restaurant/index.html
@@ -7,7 +7,7 @@
     <frmdb-t-main-nav class="container bg-white fixed-top shadow">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/vegetarian-restaurant/static/57e0d0434253af14f6da8c7dda79367f1c37dfe752506c4870277bd7964ac258b1_1280.jpg&quot;);">
+    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/vegetarian-restaurant/static/57e0d0434253af14f6da8c7dda79367f1c37dfe752506c4870277bd7964ac258b1_1280.jpg&quot;);">
         <frmdb-t-main>
             <div class="jumbotron w-100 text-center bg-transparent" style="color: rgb(128, 128, 128);">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
