--- a/git/formuladb-env/frmdb-apps/apollo-medical-center/index.html
+++ b/git/formuladb-env/frmdb-apps/apollo-medical-center/index.html
@@ -7,8 +7,8 @@
     <frmdb-t-main-nav class="container bg-white fixed-top shadow">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/apollo-medical-center/static/54e3d64b4b57a814f6da8c7dda79367f1c37dfe752506c4870277ad5974dc25cbc_1280.jpg&quot;);">
-        <frmdb-t-main class="flex-grow-1 d-flex flex-column justify-content-center" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg2.jpg')">
+    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/apollo-medical-center/static/54e3d64b4b57a814f6da8c7dda79367f1c37dfe752506c4870277ad5974dc25cbc_1280.jpg&quot;);">
+        <frmdb-t-main class="flex-grow-1 d-flex flex-column justify-content-center">
             <div class="jumbotron w-100 text-center bg-transparent">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4">Title of website</h1>
