--- a/git/formuladb-env/frmdb-apps/base-app/__test-pure-css-tabs.html
+++ b/git/formuladb-env/frmdb-apps/base-app/__test-pure-css-tabs.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- Comfort -->
-    <!-- <link rel="stylesheet" id="frmdb-look-css" href="_css/lux-ffc208-353b41.css"> -->
+<link rel="stylesheet" href="./formuladb-look.css">
     <!-- Grand Frames -->
-    <link rel="stylesheet" id="frmdb-look-css" href="/formuladb-env/css/cosmo-cb8670-363636.css">
+<link rel="stylesheet" href="./formuladb-look.css">
 
 
 </head>
