--- a/git/formuladb-env/frmdb-apps/beauty-salon/_head.html
+++ b/git/formuladb-env/frmdb-apps/beauty-salon/_head.html
@@ -11,6 +11,6 @@
 <link rel="icon" href="./favicon.svg">
 <title>FormulaDB Themes</title>
 
-<link rel="stylesheet" id="frmdb-look-css" href="/formuladb-env/css/cosmo-cb8670-363636.css">
+<link rel="stylesheet" href="./formuladb-look.css">
 <link rel="stylesheet" href="/formuladb/css/ad-grid-balham-font.css">
 </head>
