--- a/git/formuladb-env/frmdb-apps/blog-add-on-app/index.html
+++ b/git/formuladb-env/frmdb-apps/blog-add-on-app/index.html
@@ -11,7 +11,7 @@
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
     <frmdb-t-cover class="min-vh-50" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg1.jpg')">
-        <frmdb-t-main style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg2.jpg')">
+        <frmdb-t-main>
             <div class="jumbotron">
                 <h1 class="display-4">Our Blog</h1>
                 <p>Lead paragraph providing a short introduction to you blog.&nbsp;
