--- a/git/formuladb-env/frmdb-apps/formuladb-university/blocks.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-university/blocks.html
@@ -6,7 +6,7 @@
     <title>FormulaDB Theme- Imperial</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" id="frmdb-look-css" href="../_css/lux-ffc208-353b41.css">
+<link rel="stylesheet" href="./formuladb-look.css">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
         Comming soon
     </section>
 
-    <section id="google-maps" class="vh-70 frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url('/formuladb-env/frmdb-apps/formuladb-university/static/bg3.jpg');">
+    <section id="google-maps" class="vh-70 frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url('/formuladb-env/frmdb-apps/formuladb-university/static/bg3.jpg');">
         <div class="container">
             <div class="row">
                 <div class="vh-50 col d-flex flex-column justify-content-center">
