--- a/git/formuladb-env/frmdb-apps/formuladb-university/landing-page.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-university/landing-page.html
@@ -129,7 +129,7 @@
             </div>
         </div>
     </section>
-    <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/formuladb-university/static/bg3.jpg')">
+    <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-secondary-75" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/formuladb-university/static/bg3.jpg')">
         <div class="section_title text-center">
             <h2 id="themeiconcards">Cards with Icons</h2>
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
