--- a/git/formuladb-env/frmdb-apps/formuladb-university/sections.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-university/sections.html
@@ -6,12 +6,12 @@
     <title>FormulaDB Theme- Imperial</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" id="frmdb-look-css" href="../_css/lux-ffc208-353b41.css">
+<link rel="stylesheet" href="./formuladb-look.css">
 
 </head>
 
 <body data-brand-name="King" data-spy="scroll" data-target="#inner-nav-scroll">
-    <header class="mb-5 vh-40 d-flex flex-column justify-content-center frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50"
+    <header class="mb-5 vh-40 d-flex flex-column justify-content-center frmdb-bg-tint-secondary-50"
         style="--frmdb-bg-img:url('/formuladb-env/frmdb-apps/formuladb-university/static/bg1.jpg');">
         <div class="container bg-white fixed-top shadow">
             <nav class="navbar-light navbar-expand-lg" data-frmdb-fragment="_nav.html" src="_nav.html"></nav class="navbar-light navbar-expand-lg">
@@ -30,7 +30,7 @@
             data-placement="left" title="Split Screen with Jumbotron"><i class="frmdb-i-circle"></i></a>
     </div>
 
-    <section id="split-screen-form" class="vh-70 frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url('/formuladb-env/frmdb-apps/formuladb-university/static/bg3.jpg');">
+    <section id="split-screen-form" class="vh-70 frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url('/formuladb-env/frmdb-apps/formuladb-university/static/bg3.jpg');">
         <div class="container">
             <div class="row">
                 <div class="vh-50 col d-flex flex-column justify-content-center">
