--- a/git/formuladb-env/frmdb-apps/health-guardians/index.html
+++ b/git/formuladb-env/frmdb-apps/health-guardians/index.html
@@ -8,7 +8,7 @@
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
     <frmdb-t-cover style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg1.jpg')">
-        <frmdb-t-main style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg2.jpg')">
+        <frmdb-t-main>
             <div class="jumbotron">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4" data-i18n="en">health guardians</h1>
