--- a/git/formuladb-env/frmdb-apps/kids-playground/index.html
+++ b/git/formuladb-env/frmdb-apps/kids-playground/index.html
@@ -7,8 +7,8 @@
     <frmdb-t-main-nav class="container bg-white fixed-top shadow">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50">
-        <frmdb-t-main class="frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50 flex-grow-1 d-flex flex-column justify-content-center" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/kids-playground/static/54e8d1444f52a414f6da8c7dda79367f1c37dfe752506c4870277ad59045c75fb8_1280.jpg&quot;);">
+    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/kids-playground/static/54e8d1444f52a414f6da8c7dda79367f1c37dfe752506c4870277ad59045c75fb8_1280.jpg&quot;);">
+        <frmdb-t-main class="frmdb-bg-tint-secondary-50 flex-grow-1 d-flex flex-column justify-content-center">
             <div class="jumbotron animated slideInUp w-100 text-center bg-transparent" data-aos="slideInUp">
                 <h6 data-i18n="en">all ages wellcome</h6>
                 <h1 class="display-4" data-i18n="en">fun playground</h1>
