--- a/git/formuladb-env/frmdb-apps/photography-services/_head.html
+++ b/git/formuladb-env/frmdb-apps/photography-services/_head.html
@@ -11,7 +11,7 @@
 <link rel="icon" href="./favicon.svg">
 <title>FormulaDB Themes</title>
 
-<link rel="stylesheet" id="frmdb-look-css" href="/formuladb-env/css/darkly-008cba-eeeeee.css">
+<link rel="stylesheet" href="./formuladb-look.css">
 <link rel="stylesheet" href="/formuladb/css/ad-grid-balham-font.css">
 
 
