--- a/git/formuladb-env/frmdb-apps/photography-services/index.html
+++ b/git/formuladb-env/frmdb-apps/photography-services/index.html
@@ -4,7 +4,7 @@
     <title>FormulaDB Themes</title>
 </head>
 <body data-frmdb-theme="Comfort" class="text-center frmdb-editor-normal">
-    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/photography-services/static/5ee6d0414357b108f5d08460962936771d3edce4524c704c7d2f79d4974ecc5b_1280.jpg&quot;);">
+    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/photography-services/static/5ee6d0414357b108f5d08460962936771d3edce4524c704c7d2f79d4974ecc5b_1280.jpg&quot;);">
         <frmdb-t-main class="flex-grow-1 d-flex flex-column justify-content-center">
             <div class="text-center
 ">
