--- a/git/formuladb-env/frmdb-apps/wellness-services/index.html
+++ b/git/formuladb-env/frmdb-apps/wellness-services/index.html
@@ -7,7 +7,7 @@
     <frmdb-t-main-nav class="container bg-white fixed-top shadow">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-parallax frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/wellness-services/static/54e8d0464352b108f5d08460962936771d3edce4524c704c7d2f7ad5944fcd5e_640.jpg&quot;);">
+    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/wellness-services/static/54e8d0464352b108f5d08460962936771d3edce4524c704c7d2f7ad5944fcd5e_640.jpg&quot;);">
         <frmdb-t-main class="flex-grow-1 d-flex flex-column justify-content-center">
             <div class="jumbotron w-100 text-center bg-transparent">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
