--- a/git/formuladb-env/frmdb-apps/formuladb-io/_nav.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/_nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark frmdb-navbar-hover" data-frmdb-fragment="_nav.html">
+<nav class="navbar navbar-dark frmdb-navbar-hover navbar-expand-lg" data-frmdb-fragment="_nav.html">
 <div class="container">
     <a class="navbar-brand mr-lg-5" href="/">
         <img src="/formuladb-env/frmdb-apps/formuladb-io/static/logo.png" style="height: 40px">
