--- a/git/formuladb-env/frmdb-apps/formuladb-io/blog-free-digital-transformation-consulting-for-sme-against-covid19.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/blog-free-digital-transformation-consulting-for-sme-against-covid19.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Launching Fdb</title>
+    <title>Fee Digital Transformation Consulting for SMEs Fight against Covid19</title>
     <meta name="author" content="Alex Cristu">
     <meta name="description" content="landing page">
     <meta name="frmdb_display_date" content="2020-03-31">
 </head>
 <body class="frmdb-editor-normal">
-    <div class="frmdb-t-main-nav">
+    <frmdb-t-main-nav class="">
         <div data-frmdb-fragment="_nav.html"></div>
-    </div>
-    <header class="frmdb-t-header" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg1.jpg')">
+    </frmdb-t-main-nav>
+    <frmdb-t-header class="" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/formuladb-io/static/52e6d3444955a414f6da8c7dda2936771d3edce4524c704c7d2a7dd39f4fc650_1280.jpg&quot;);">
         <div class="jumbotron">
-            <h1 class="display-4" contenteditable="true" spellchecker="false">Digital transformation in the Covid-19 crisis</h1>
-            <p>Many brick and mortar businesses have been affected by the Covid-19 crisis.&nbsp;We are offering free consulting to help anybody who wants to quickly launch some online services.&nbsp;
-                <br>
-            </p>
-            <a href="javascript:void(0)" class="btn btn-primary mx-auto">Contact us</a>
+            <h1 class="display-4" contenteditable="true" spellchecker="false">Digital transformation against Covid-19</h1>
         </div>
-    </header>
+    </frmdb-t-header>
     <section class="container py-5 my-5">
+        <p>Many brick and mortar businesses have been affected by the Covid-19 crisis.&nbsp;We are offering free consulting to help anybody who wants to quickly launch some online services.&nbsp;
+            <br>
+        </p>
         <div class="row">
             <div class="col">
                 <img class="img-fluid" src="/formuladb-env/frmdb-apps/formuladb-io/static/52e6d3444955aa14f6da8c7dda2936771d3edce4524c704c7d2a7dd09349c45b_1280.jpg" alt="...">
@@ -51,9 +50,8 @@
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-469cf41adb11dc78be68c1ae7f9457a4.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-469cf41adb11dc78be68c1ae7f9457a4.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
 </body>
 </html>
 </html>
