fixed app list and filter bar

--- a/git/formuladb-env/frmdb-apps/photography-services/index.html
+++ b/git/formuladb-env/frmdb-apps/photography-services/index.html
@@ -6,8 +6,7 @@
 <body data-frmdb-theme="Comfort" class="text-center frmdb-editor-normal">
     <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/photography-services/static/5ee6d0414357b108f5d08460962936771d3edce4524c704c7d2f79d4974ecc5b_1280.jpg&quot;);">
         <frmdb-t-main class="flex-grow-1 d-flex flex-column justify-content-center">
-            <div class="text-center
-">
+            <div class="text-center">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="jumbotron w-100 text-center bg-transparent" data-i18n="en">Peter Parker&nbsp;
                     <div data-i18n="en">Photography</div>
