work on formuladb-io blog posts

--- a/git/formuladb-env/frmdb-apps/formuladb-io/_head.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/_head.html
@@ -18,10 +18,10 @@
     </script>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="">
-<meta name="author" content="">
-<title>FormulaDB - Build Applications Without Code</title>
+<meta name="description" content="landing page">
+<meta name="author" content="Alex Cristu">
+<title>Fee Digital Transformation Consulting for SMEs Fight against Covid19</title>
 <link rel="icon" href="./favicon.svg">
 <link rel="stylesheet" href="./formuladb-look.css">
-<meta name="frmdb_display_date" content="">
+<meta name="frmdb_display_date" content="2020-03-31">
 </head>
