--- a/git/formuladb-env/frmdb-apps/formuladb-io/blog-free-digital-transformation-consulting-for-sme-against-covid19.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/blog-free-digital-transformation-consulting-for-sme-against-covid19.html
@@ -6,41 +6,41 @@
     <meta name="description" content="landing page">
     <meta name="frmdb_display_date" content="2020-03-31">
 </head>
-<body class="frmdb-editor-normal">
-    <frmdb-t-main-nav class="">
-        <div data-frmdb-fragment="_nav.html"></div>
-    </frmdb-t-main-nav>
-    <frmdb-t-header class="" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/formuladb-io/static/52e6d3444955a414f6da8c7dda2936771d3edce4524c704c7d2a7dd39f4fc650_1280.jpg&quot;);">
+<body class="frmdb-editor-preview">
+    <div class="min-vh-50 overflow-hidden d-flex flex-column justify-content-center frmdb-bg-parallax frmdb-section-dark frmdb-bg-2 frmdb-bg-user frmdb-bg-2-dark-solid" style="--frmdb-bg-img:url('static/transformation-3753466_1920.jpg')">
+        <div class="container">
+            <div data-frmdb-fragment="_nav.html"></div>
+        </div>
         <div class="jumbotron">
             <h1 class="display-4" contenteditable="true" spellchecker="false">Digital transformation against Covid-19</h1>
         </div>
-    </frmdb-t-header>
+    </div>
     <section class="container py-5 my-5">
         <p>Many brick and mortar businesses have been affected by the Covid-19 crisis.&nbsp;We are offering free consulting to help anybody who wants to quickly launch some online services.&nbsp;
             <br>
         </p>
+        <p>Online services can help small businesses mitigate the risk of a prolonged lockdown of their physical business locations. Even if you offer it cheaper or free in the beginning, these digital services could become an important revenue stream as well as a marketing channel.</p>
+        <p>We've seen many small business owners trying to move some of their services online: various consulting businesses holding online meetings instead of physical meetings, fitness coaches and various other sports using zoom video conferencing to keep their customers in shape during the lockdown, tutors holding their classes via skype, restaurants creating live cooking classes and selling the ingredients online and the list goes on...</p>
         <div class="row">
-            <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/formuladb-io/static/52e6d3444955aa14f6da8c7dda2936771d3edce4524c704c7d2a7dd09349c45b_1280.jpg" alt="...">
+            <div class="col d-flex flex-column justify-content-center">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/formuladb-io/static/57e8d0434c53af14f1dc8460c6293e76143ddfe44e507441702973d1964ac6_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
-                    <h2>
-                        <div>FormulaDB is a no-code platform allowing anyone to build websites and business applications without any formal IT training.</div>
-                    </h2>
-                    <p contenteditable="true" spellchecker="false">Online services can help small businesses mitigate the risk of a prolonged lockdown of their physical business locations. Even if you offer it cheaper or for free in the beginning, these digital services could become an important revenue stream as well as a marketing channel. We've seen many small business owners trying to move some of their services online: various consulting businesses holding online meetings instead of physical meetings, fitness coaches and various other sports using zoom video conferencing to keep their customers in shape during the lockdown, tutors holding their classes via skype, restaurants creating live cooking classes and selling the ingredients online and the list goes on...</p>
+                    <h2>FormulaDB no-code platform</h2>
+                    <p class="text-left">FormulaDB platform allows anyone to build websites and business applications without any formal IT training.</p>
                     <div>
-                        <div>Examples of services we can quickly help you get started with:</div>
-                        <div>&nbsp; - setting up a website</div>
-                        <div>&nbsp; - managing your contacts and messages</div>
-                        <div>&nbsp; - setting up an online booking system and use video conferencing tools to engage with your customers</div>
-                        <div>&nbsp; - setting up a blog and start to publish digital content for your customers</div>
-                        <div>
-                            <br>
-                        </div>
+                        <div class="text-left">Examples of services we can quickly help you get started with:</div>
+                        <ul class="mx-1 text-left">
+                            <li>setting up a website</li>
+                            <li>managing your contacts and contact messages</li>
+                            <li>setting up an online booking system and use video conferencing tools to engage with your customers</li>
+                            <li>setting up a blog and start to publish digital content for your customers</li>
+                            <li>mange you expenses, inventory, planning</li>
+                        </ul>
                     </div>
                     <p></p>
-                    <a class="btn btn-primary mx-auto" href="javascript:void(0)">Contact us</a>
+                    <a class="btn btn-primary mx-auto" href="index.html">Start today !</a>
                 </div>
             </div>
         </div>
@@ -50,6 +50,10 @@
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-469cf41adb11dc78be68c1ae7f9457a4.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-469cf41adb11dc78be68c1ae7f9457a4.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
     <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-469cf41adb11dc78be68c1ae7f9457a4.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
     <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-469cf41adb11dc78be68c1ae7f9457a4.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
 </body>
