more work on portal

--- a/git/formuladb-env/frmdb-apps/formuladb-io/blog-become-no-code-consultant.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/blog-become-no-code-consultant.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Fee Digital Transformation Consulting for SMEs Fight against Covid19</title>
+    <title>Become a no-code consultant</title>
     <meta name="author" content="Alex Cristu">
     <meta name="description" content="landing page">
     <meta name="frmdb_display_date" content="2020-03-31">
 </head>
-<body class="frmdb-editor-preview">
-    <frmdb-t-main-nav class="">
-        <div data-frmdb-fragment="_nav.html"></div>
-    </frmdb-t-main-nav>
-    <frmdb-t-header class="" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/formuladb-io/static/52e6d3444955a414f6da8c7dda2936771d3edce4524c704c7d2a7dd39f4fc650_1280.jpg&quot;);">
+<body class="frmdb-editor-preview frmdb-editor-normal">
+    <div class="min-vh-50 overflow-hidden d-flex flex-column justify-content-center frmdb-bg-parallax frmdb-section-dark frmdb-bg-2 frmdb-bg-user frmdb-bg-2-dark-solid" style="--frmdb-bg-img:url('/formuladb-env/frmdb-apps/formuladb-io/static/57e8d0434c53af14f1dc8460c6293e76143ddfe44e507441702973d1964ac6_640.jpg')" formuladb-env="" frmdb-apps="" formuladb-io="" static="">
+        <div class="container">
+            <div data-frmdb-fragment="_nav.html"></div>
+        </div>
         <div class="jumbotron">
             <h1 class="display-4" contenteditable="true" spellchecker="false">Become a no-code consultant</h1>
+            <h1>formuladb blog</h1>
+            <h4>Apr 27 2020</h4>
         </div>
-    </frmdb-t-header>
+    </div>
     <section class="container py-5 my-5">
+        <p>Digital technology like web and mobile apps, social media, artificial intelligence, virtual reality, and many more technological advancements are changing the way we work and interact with colleagues, customer, partners.
+                    </p>
+        <p>
+                        We believe that building digital services and products should not be reserved to formally trained IT proffesionals. We believe that everyone cand initiate and sustain the digital transformation of a business or some parts or processes of a business. 
+                    </p>
+        <p>
+                        You can be a tech savvy person while specialized in non-IT areas like marketing, human resources, management, communication, back office specialist, etc.
+                    </p>
         <div class="row">
-            <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/formuladb-io/static/52e6d3444955aa14f6da8c7dda2936771d3edce4524c704c7d2a7dd09349c45b_1280.jpg" alt="...">
+            <div class="col d-flex flex-column justify-content-center">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/formuladb-io/static/52e6d3444955a414f6da8c7dda2936771d3edce4524c704c7d2a7dd39f4fc650_1280.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
-                    <p>Digital technology like web and mobile apps, social media, artificial intelligence, virtual reality, and many more technological advancements are changing the way we work and interact with colleagues, customer, partners.
-                    </p>
+                    <h2>
+                        FormulaDB no-code platform
+                    </h2>
                     <p>
-                        We believe that building digital services and products should not be reserved to formally trained IT proffesionals. We believe that everyone cand initiate ans sustain the digital transformation of a business or some parts or processes of a business. 
-                    </p>
-                    <p>
-                        You can be a tech savvy person while specialized in non-IT areas like marketing, human resources, management, communication, back office specialist, etc.
-                    </p>
-                    <p>
-                        FormulaDB is a no-code platform allowing anyone to build websites and business applications without any formal IT training.
+                        FormulaDB platform allows anyone to build websites and business applications without any formal IT training.
                     </p>
                     <p>
                         Become a FormulaDB no-code consultant and join us in our mission to democratize digital transformation.
@@ -44,6 +49,12 @@
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
     <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-469cf41adb11dc78be68c1ae7f9457a4.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-469cf41adb11dc78be68c1ae7f9457a4.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-469cf41adb11dc78be68c1ae7f9457a4.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
 </body>
 </html>
 </html>
