--- a/git/formuladb-env/frmdb-apps/formuladb-io/blog-free-digital-transformation-consulting-for-sme-against-covid19.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/blog-free-digital-transformation-consulting-for-sme-against-covid19.html
@@ -6,17 +6,19 @@
     <meta name="description" content="landing page">
     <meta name="frmdb_display_date" content="2020-03-31">
 </head>
-<body class="frmdb-editor-preview">
+<body class="frmdb-editor-preview frmdb-editor-normal">
     <div class="min-vh-50 overflow-hidden d-flex flex-column justify-content-center frmdb-bg-parallax frmdb-section-dark frmdb-bg-2 frmdb-bg-user frmdb-bg-2-dark-solid" style="--frmdb-bg-img:url('static/transformation-3753466_1920.jpg')">
         <div class="container">
             <div data-frmdb-fragment="_nav.html"></div>
         </div>
         <div class="jumbotron">
             <h1 class="display-4" contenteditable="true" spellchecker="false">Digital transformation against Covid-19</h1>
+            <h1>formuladb blog</h1>
+            <h4>Apr 6 2020</h4>
         </div>
     </div>
     <section class="container py-5 my-5">
-        <p>Many brick and mortar businesses have been affected by the Covid-19 crisis.&nbsp;We are offering free consulting to help anybody who wants to quickly launch some online services.&nbsp;
+        <p>Many brick and mortar businesses have been affected by the Covid-19 crisis.&nbsp;We are offering free consulting to help anybody who wants to quickly launch online services.&nbsp;
             <br>
         </p>
         <p>Online services can help small businesses mitigate the risk of a prolonged lockdown of their physical business locations. Even if you offer it cheaper or free in the beginning, these digital services could become an important revenue stream as well as a marketing channel.</p>
@@ -52,6 +54,10 @@
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-469cf41adb11dc78be68c1ae7f9457a4.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-469cf41adb11dc78be68c1ae7f9457a4.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
     <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-469cf41adb11dc78be68c1ae7f9457a4.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
     <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-469cf41adb11dc78be68c1ae7f9457a4.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
     <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-469cf41adb11dc78be68c1ae7f9457a4.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
