fix overflowing app/table/page names in editor

--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -88,8 +88,8 @@
                     <i class="frmdb-i-sitemap"></i>
                 </a>
             </li>
-            <li class="nav-item dropdown frmdb-dropdown-hover flex-grow-1">
-                <a href="javascript:void(0)" title="Apps List" class="nav-link dropdown-toggle text-primary text-center" aria-haspopup="true"
+            <li class="nav-item dropdown frmdb-dropdown-hover flex-grow-1 m-w-0">
+                <a href="javascript:void(0)" title="Apps List" class="nav-link overflow-hidden dropdown-toggle text-primary text-center" aria-haspopup="true"
                     aria-expanded="false" data-frmdb-value="selectedAppName">
                 </a>
                 <div class="dropdown-menu">
@@ -116,8 +116,8 @@
                     <i class="frmdb-i-table"></i>
                 </a>
             </li>
-            <li class="nav-item dropdown frmdb-dropdown-hover flex-grow-1">
-                <a href="javascript:void(0)" title="App Table List" class="nav-link dropdown-toggle text-primary text-center" aria-haspopup="true"
+            <li class="nav-item dropdown frmdb-dropdown-hover flex-grow-1 m-w-0">
+                <a href="javascript:void(0)" title="App Table List" class="nav-link overflow-hidden dropdown-toggle text-primary text-center" aria-haspopup="true"
                     aria-expanded="false" data-frmdb-value="selectedTableId">
                 </a>
                 <div class="dropdown-menu">
@@ -144,8 +144,8 @@
                     <i class="frmdb-i-image"></i>
                 </a>
             </li>
-            <li class="nav-item dropdown flex-grow-1 frmdb-dropdown-hover">
-                <a href="javascript:void(0)" title="App Page List" class="nav-link dropdown-toggle text-center" role="button" aria-haspopup="true"
+            <li class="nav-item dropdown flex-grow-1 frmdb-dropdown-hover m-w-0">
+                <a href="javascript:void(0)" title="App Page List" class="nav-link overflow-hidden dropdown-toggle text-center" role="button" aria-haspopup="true"
                     aria-expanded="false" data-frmdb-value="selectedPageName">
                 </a>
                 <div class="dropdown-menu">
